# conn_mon

./: .gitignore  Cargo.toml  README.md  deny.toml  sample_config_full.json
.cargo/: config.toml
.github/workflows/: audit.yml  general.yml  release.yml
sample_config_full/: config.json
sample_config_minimal/: config.json
src/: cli.rs  config.rs  event_recorder.rs  lib.rs  logging.rs  main.rs  notification.rs  ping.rs  state_management.rs  units.rs  utils.rs
src/notification/: discord.rs  email.rs
