[package]
name = "conn_mon"
version = "0.4.0"
edition = "2021"
default-run = "conn_mon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive", "cargo"] }
log = "0.4.19"
regex = "1.9.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serenity = { git = "https://github.com/serenity-rs/serenity/", branch = "next" }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
lettre = "0.11.0"
log4rs = "1.2.0"

[dev-dependencies]
rstest = "0.18.1"
