[package]
name = "conn_mon"
version = "0.5.0"
edition = "2021"
default-run = "conn_mon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.21", features = ["derive", "cargo"] }
lettre = "0.11.0"
log = "0.4.19"
log4rs = "1.2.0"
regex = "1.9.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serenity = { version = "0.12.0", default-features = false, features = [
    "model",
    "rustls_backend",
] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }

[dev-dependencies]
rstest = "0.18.1"
